# mobile_motion_planning

./: .bumpversion.cfg  CONTRIBUTING.rst  LICENSE  README.rst  ROLLING_REPLAN_README.md  package.xml  setup.cfg  setup.py  tasks.py
.github/ISSUE_TEMPLATE/: bug_report.md
data/example_data/: _251117_163017_base_frames.json  __251117_163017_flange_frames.json  shortest_path.json
data/example_data/260311_Segment_4/: 260311_150455_base_frames.json  260311_150455_collision_free_solutions.json  260311_150455_flange_frames.json  260311_150455_metadata.json  260311_150455_planes.json  260311_150455_shortest_path.json  260311_150455_solutions.json  260311_150455_solutions_selected.json  260311_segment_4_BCS.json  260311_segment_4_RCF_1.json  260311_segment_4_RCF_2.json  260311_segment_4_TCP_planes.json
data/example_data/test_data/: _251117_163017_flange_frames.json  __251117_163017_base_frames.json  ___251117_163017_base_frames.json
data/recordings/: 10_deg_either_side_no_collision_20260313_160446.csv  2_deg_either_side_no_collision_20260313_155139.csv  eval.ipynb  eval.txt  no_rotation_no_collision_20260313_141504.csv  replan_metrics_20260316_104242.csv
docs/: conf.py  index.rst  odom_reader_node_architecture.md  rolling_replan_node_architecture.md
docs/reference/: index.rst
notebooks/: flange_from_planes.ipynb  test.ipynb
src/mobile_motion_planning/: __version__.py  odom_reader_node.py  partial_trajectory.py  rolling_replan_node.py
src/mobile_motion_planning/ik_offline/: example_use.ipynb  ik.py  (+4 more)
tests/: test_partial_trajectory.py  test_sample.py  test_trans.py
(+1 files in other folders)
