<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_motion_planning</name>
  <version>0.1.0</version>
  <description>Motion planning for mobile robots in motion</description>

  <maintainer email="doerfler@tum.de">Augmented Fabrication Lab</maintainer>
  <author email="doerfler@tum.de">Augmented Fabrication Lab</author>

  <license>MIT</license>

  <url type="website">https://github.com/augmentedfabricationlab/mobile_motion_planning</url>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>python3-compas</depend>

  <test_depend>ament_pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
